# resourceable

./: .gitignore  Cargo.toml  README.md
examples/: quickstart.rs
examples/sqlx-postgres/: Cargo.toml  README.md  main.rs
examples/sqlx-postgres/migrations/: 20201208112259_create_groups.sql
examples/sqlx-postgres/src/: main.rs
src/: lib.rs  resourceable.rs
