[package]
name = "resourceable-example-sqlx"
version = "0.1.0"
authors = ["Mark Waddoups <mwaddoups@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resourceable = { path = "../.." }
async-std = { version = "1.7.0", features = ["attributes"] }
anyhow = "1.0"
serde = "1.0.118"
async-trait = "0.1.42"
serde_json = "1.0.60"
tide = "0.15.0"
http-types = "2.9.0"
sqlx = { version = "0.4.0", features = ["runtime-async-std-native-tls", "postgres"]}
dotenv = "0.15.0"
